--- a/style.css
+++ b/style.css
@@ -39,13 +39,7 @@ body {
   display: table-row;
 }
 
-.col-1 {
-  width: 100px;
-}
-.col-2 {
-  width: 100px;
-}
-.cell-n {
+.timetable-cell {
   border-bottom: 2px solid rgb(0, 0, 0);
   padding: 5px 9px;
   display: table-cell;
